--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 This file was created by IntelliJ IDEA 12.0.4 for binding GitHub repository
+FORMAT one of {XML,JSON}
+run:
+java -jar review.jar --format=FORMAT --outfile=/path/to/outfile
